--- a/WebShop-Back/WebShop-Back/WebShop-Back.csproj
+++ b/WebShop-Back/WebShop-Back/WebShop-Back.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200805092507_AddProducersTable.cs" />
+    <Compile Remove="Migrations\20200805092507_AddProducersTable.Designer.cs" />
+    <Compile Remove="Migrations\20200805092608_AddProducersTable.cs" />
+    <Compile Remove="Migrations\20200805092608_AddProducersTable.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
