--- a/WebShop-Back/WebShop-Back/WebShop-Back.csproj
+++ b/WebShop-Back/WebShop-Back/WebShop-Back.csproj
@@ -29,6 +29,8 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\Logo\" />
+    <Folder Include="wwwroot\Templates\" />
     <Folder Include="wwwroot\Orders\" />
   </ItemGroup>
 
