Izmene na OrderService-u za racunanje ukupne cene sa popustom

--- a/WebShop-Back/WebShop-Back/WebShop-Back.csproj
+++ b/WebShop-Back/WebShop-Back/WebShop-Back.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\Images\" />
     <Folder Include="wwwroot\Logo\" />
+    <Folder Include="wwwroot\Orders\" />
     <Folder Include="wwwroot\Templates\" />
     <Folder Include="wwwroot\Orders\" />
   </ItemGroup>
