--- a/WebShop-Front/package.json
+++ b/WebShop-Front/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "@auth0/angular-jwt": "^5.0.1",
+    "jquery": "^3.5.1",
     "ngx-cookie-service": "^10.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
